--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#section4" class="btn">Contact Me</a>
         </div>
         <div class="row1-col2-sec1">
-            <img src="/images/Rectangle.png" alt="MyProfile" />
+            <img src="./images/Rectangle.png" alt="MyProfile" />
         </div>
     </div>
 
@@ -67,19 +67,19 @@
     </div>
     <div class="icon-skills">
         <marquee behavior="" direction="left">
-            <img src="/images/html.png" alt="">
-            <img src="/images/css-3.png" alt="">
-            <img src="/images/javascript.png" alt="">
-            <img src="/images/php.png" alt="">
-            <img src="/images/angular.png" alt="">
-            <img src="/images/react.png" alt="">
-            <img src="/images/java.png" alt="">
-            <img src="/images/kotlin.png" alt="">
-            <img src="/images/c.png" alt="">
-            <img src="/images/vscode.png" alt="">
-            <img src="/images/intellijidea.png" alt="">
-            <img src="/images/github.png" alt="">
-            <img src="/images/docker.png" alt="">
+            <img src="./images/html.png" alt="">
+            <img src="./images/css-3.png" alt="">
+            <img src="./images/javascript.png" alt="">
+            <img src="./images/php.png" alt="">
+            <img src="./images/angular.png" alt="">
+            <img src="./images/react.png" alt="">
+            <img src="./images/java.png" alt="">
+            <img src="./images/kotlin.png" alt="">
+            <img src="./images/c.png" alt="">
+            <img src="./images/vscode.png" alt="">
+            <img src="./images/intellijidea.png" alt="">
+            <img src="./images/github.png" alt="">
+            <img src="./images/docker.png" alt="">
         </marquee>
 
 
@@ -90,7 +90,7 @@
                     <a href="https://aowjan.pcnone.com/" target="_blank">
                         <div class="column">
                             <div class="content">
-                                <img src="/images/Screenshot 2023-12-04 031639.png" alt="" style="width:100%">
+                                <img src="./images/Screenshot 2023-12-04 031639.png" alt="" style="width:100%">
                                 <h4>Aowjan</h4>
                                 <p>Web develop</p>
                             </div>
@@ -99,7 +99,7 @@
                     <a href="https://yzwzgh.csb.app/" target="_blank">
                         <div class="column">
                             <div class="content">
-                                <img src="/images/Screenshot 2023-12-04 044304.png" alt="" style="width:100%">
+                                <img src="./images/Screenshot 2023-12-04 044304.png" alt="" style="width:100%">
                                 <h4>Clone Tinder</h4>
                                 <p>Web design</p>
                             </div>
@@ -116,7 +116,7 @@
                     <a href="https://www.figma.com/proto/keKjqoe4fpVLEsawB2HvQz/%E0%B8%A2%E0%B9%88%E0%B8%AD%E0%B8%A5%E0%B8%B4%E0%B8%87%E0%B8%84%E0%B9%8C?page-id=0%3A1&type=design&node-id=4-2&viewport=182%2C333%2C0.22&t=TIUmEDvoVTNALCJ2-1&scaling=min-zoom&mode=design" target="_blank">
                         <div class="column">
                             <div class="content">
-                                <img src="/images/Screenshot 2023-12-04 045503.png" alt="" style="width:100%">
+                                <img src="./images/Screenshot 2023-12-04 045503.png" alt="" style="width:100%">
                                 <h4>linklud</h4>
                                 <p>Web develop</p>
                             </div>
@@ -125,7 +125,7 @@
                     <a href="https://www.figma.com/proto/BHF6jJkuVn9mqsVFan2PTC/TaeTip?page-id=0%3A1&type=design&node-id=5-14&viewport=432%2C332%2C0.18&t=09j2MAM5MtW7kYJW-1&scaling=min-zoom&mode=design" target="_blank">
                         <div class="column">
                             <div class="content">
-                                <img src="/images/Screenshot 2023-12-04 045826.png" alt="" style="width:100%">
+                                <img src="./images/Screenshot 2023-12-04 045826.png" alt="" style="width:100%">
                                 <h4>TaeTip.com</h4>
                                 <p>Web develop</p>
                             </div>
