add page java api

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <a href="#section1">Home</a>
             <a href="#section2">About Me</a>
             <a href="#section3">Portfolio</a>
+            <a href="./page/java.html">Java</a>
+            <a href="./page/Api.html">Api</a>
         </div>
         <div class="contact"><a href="#section4">Contact me</a></div>
     </nav>
@@ -23,7 +25,8 @@
     <div class="container-section1" id="section1">
         <div class="row1-col1-sec1">
             <p> I’m Thiraphat Chonlathep <br>
-                Frontend developer</p>
+                Frontend developer <br>
+                <span style="font-weight: 200;">Rajamangala University of Technology Isan Khonkaen Campus</span></p>
             <a href="#section4" class="btn">Contact Me</a>
         </div>
         <div class="row1-col2-sec1">
