add downland resume

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 Frontend developer <br>
                 <span style="font-weight: 200;">Rajamangala University of Technology Isan Khonkaen Campus</span></p>
             <a href="#section4" class="btn">Contact Me</a>
+            <a href="./images/resume.pdf" class="btn" target="_blank">Download Me</a>
         </div>
         <div class="row1-col2-sec1">
             <img src="./images/Rectangle.png" alt="MyProfile" />
