--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/indexStyle.css">
-    <link rel="shortcut icon" href="./images/RectangleRGB.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/Rectangle.png" type="image/x-icon">
     <title>Thiraphat.Ch</title>
 </head>
 
 <body>
+    <audio src="" autoplay ></audio>
+
     <nav>
+        <audio src="./sound/y2meta.com - lofi songs for slow days (128 kbps).mp3" controls autoplay></audio>
         <div class="barnd">SirFamily</div>
         <div class="menu">
             <a href="#section1">Home</a>
