--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-    <audio src="" autoplay ></audio>
+    <!-- <audio src="" autoplay ></audio> -->
 
     <nav>
-        <audio src="./sound/y2meta.com - lofi songs for slow days (128 kbps).mp3" controls autoplay></audio>
         <div class="barnd">SirFamily</div>
         <div class="menu">
             <a href="#section1">Home</a>
