--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <audio src="" autoplay ></audio> -->
 
     <nav>
-        <div class="barnd">SirFamily</div>
+        <div class="barnd">Thiraphat</div>
         <div class="menu">
             <a href="#section1">Home</a>
             <a href="#section2">About Me</a>
