Update the "Clone Tinder" project description from "Web design" to "Web develop". Add a new project called "Clone Job Passcard" with a link to "https://sirfamily.github.io/ShoppingCartpage/" and a description of "Web develop". (generated by blackbox.ai )

--- a/index.html
+++ b/index.html
@@ -102,17 +102,26 @@
                             </div>
                         </div>
                     </a>
+
                     <a href="https://yzwzgh.csb.app/" target="_blank">
                         <div class="column">
                             <div class="content">
                                 <img src="./images/Screenshot 2023-12-04 044304.png" alt="" style="width:100%">
                                 <h4>Clone Tinder</h4>
-                                <p>Web design</p>
+                                <p>Web develop</p>
                             </div>
                         </div>
                     </a>
                     
-
+                    <a href="https://sirfamily.github.io/ShoppingCartpage/" target="_blank">
+                        <div class="column">
+                            <div class="content">
+                                <img src="./images/Screenshot 2023-12-12 070603.png" alt="" style="width:100%">
+                                <h4>Clone Job Passcard</h4>
+                                <p>Web develop</p>
+                            </div>
+                        </div>
+                    </a>
 
                 </div>
             </div>
